# nfl-dashboard-backend

./: .env.example  .gitignore  apply_hotfix_pkg.sh  apply_stress_patch.sh  diagnose_paths.sh  pyproject.toml  requirements.txt
app/: cfb_scoreboard.py  config.py  main.py  schemas.py
app/api/: routers.py
app/clients/: cfbd.py  espn.py
app/models/: schemas.py
app/services/: games.py  scoreboard.py
app/utils/: cache.py  cfb_logos.py  http.py
claude-ref/: 401778313 api output test.txt  401778313.txt  Central Michigan vs. Northwestern (Dec 26, 2025) Live Score - ESPN.html
etc/systemd/system/: nfldashboard.service
football_dash_frontend/: package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
football_dash_frontend/lib/: api.ts
football_dash_frontend/src/: App.tsx  api.ts  index.css  routes.tsx  styles.css  types.ts
football_dash_frontend/src/components/: CfbScoreboard.tsx  DriveInfo.tsx  FieldDisplay.css  FieldDisplay.tsx  GameCard.tsx  GameDashboard.tsx  GameList  GameList.tsx  GamesToday.tsx  NFLGameCard.tsx  ScoreboardHeader.tsx  WeekSelector.tsx
football_dash_frontend/src/pages/: Game.tsx  Scoreboard.tsx
nfl-dashboard-backend-main/: README.md  diagnose_root.sh
nfl-dashboard-backend-main/app/: cfb_scoreboard.py
nfl-dashboard-backend-main/football_dash_frontend/: index.html
nfl-dashboard-backend-main/tests/: conftest.py  test_basic.py  test_core_fallback.py
tests/: test_api_scoreboard.py  test_cfb_scoreboard.py  test_clients_espn.py  test_games_situation.py  test_games_today.py  test_scoreboard_routes.py
types/: api.ts.rtf
(+16 files in other folders)
