[project]
name = "football-dashboard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0","pytest-asyncio>=0.23.0","pytest-mock>=3.12.0","respx>=0.21.1"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
